# vodom_ws

./: .dockerignore  Dockerfile  README.md
install/: local_setup.sh  setup.sh
install/vodom_first/lib/vodom_first/: ground_truth_path_node  listener_node  minimal_path_publisher  visual_odo_Uli  visual_odometry_node  vodom_first_node
install/vodom_first/share/ament_index/resource_index/package_run_dependencies/: vodom_first
install/vodom_first/share/ament_index/resource_index/parent_prefix_path/: vodom_first
install/vodom_first/share/vodom_first/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vodom_first/share/vodom_first/cmake/: vodom_firstConfig-version.cmake  vodom_firstConfig.cmake
install/vodom_first/share/vodom_first/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/vodom_first/: CMakeLists.txt
src/vodom_first/Kitti_Sequence_Larga/: poses.txt
src/vodom_first/src/: ground_truth_path_node.cpp  listener_node.cpp  minimal_path_publisher.cpp  visual_odo_Uli.cpp  visual_odometry_node.cpp  vodom_first_node.cpp
